@@ -7,6 +7,8 @@ Release Notes
 
 trunk
 -----
+* add `__bool__` to `ValidationReport` in addition to `__nonzero__`.
+  python2 uses `__nonzero__` but python3 uses `__bool__`.
 
 V01-03-02
 ---------
